<resources>
    <string name="home_open_qr">Открыть QR-пропуск</string>
    <string name="home_open_my_itmo">Открыть My ITMO</string>
    <string name="home_empty_title">Пока пусто</string>
    <string name="home_hint_dismiss">Скрыть подсказку</string>
    <string name="home_hint_widgets_title">Добавьте виджет</string>
    <string name="home_hint_widgets_description">Ближайшая пара и QR-пропуск прямо на домашнем экране.</string>
    <string name="home_hint_widgets_action">Добавить</string>
    <string name="home_hint_notifications_title">Уведомления выключены</string>
    <string name="home_hint_notifications_description">Без них не придут результаты автозаписи на спорт и заявки в друзья.</string>
    <string name="home_hint_notifications_action">Включить</string>
    <string name="home_hint_services_title">Друзья и автозапись</string>
    <string name="home_hint_services_description">Друзья на паре, очереди на спорт и уведомления.</string>
    <string name="home_hint_services_action">Подключиться</string>
</resources>
